--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@
   * Fix up error/debug output.  In particular, ensure function or file+line is
   always printed and print server number.
   * Proper PVFS error handling, see pvfs2-types.h:537
+  * skye-mkdir creates initial partition for root
